--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -5,3 +5,7 @@ params {
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
 }
+
+env {
+    REF_PATH="/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://refcache.dnapipelines.sanger.ac.uk::8000/%s"
+}
