add process config hints

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,4 +1,5 @@
-
+// !! this is not currently imported, just put here as reference of something that should be added to a pipeline's config when including this subworkflow
+// Config for processes could be loaded in https://github.com/sanger-pathogens/nextflow-commons/ ; see https://github.com/sanger-pathogens/nextflow-commons/pull/14
 params {
     study = -1 // default value that should fail the iRODS query
     runid = -1 // default value that should fail the iRODS query
@@ -8,4 +9,26 @@ params {
 
 env {
     REF_PATH="/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://refcache.dnapipelines.sanger.ac.uk::8000/%s"
+}
+
+process {
+    // for IRODS_EXTRACTOR subworkflow
+
+    withName:JSON_PREP {
+        executor = "local"
+    }
+
+    withName:BATON {
+        executor = "local"
+        maxForks = 1
+    }
+
+    withName:JSON_PARSE {
+        executor = "local"
+    }
+
+    withName:RETRIEVE_CRAM {
+        executor = "lsf"
+        clusterOptions = "-R 'rusage[seqirods=100]'"
+    }
 }
