save metadata function

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -4,6 +4,7 @@ params {
     runid = -1 // default value that should fail the iRODS query
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
+    save_metadata = true //on by default
 }
 
 env {
