cleanup bam only an option

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -9,3 +9,8 @@ params {
 env {
     REF_PATH="/lustre/scratch125/core/sciops_repository/cram_cache/%2s/%2s/%s:/lustre/scratch126/core/sciops_repository/cram_cache/%2s/%2s/%s:URL=http:://refcache.dnapipelines.sanger.ac.uk::8000/%s"
 }
+
+
+params {
+    cleanup_intermediate_files_irods_extractor = false
+}
