--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -32,3 +32,7 @@ process {
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
 }
+
+params {
+    cleanup_intermediate_files_irods_extractor = false
+}
