--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -5,6 +5,8 @@ params {
     runid = -1 // default value that should fail the iRODS query
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
+    save_metadata = true //on by default
+    cleanup_intermediate_files_irods_extractor = false
 }
 
 env {
@@ -31,8 +33,4 @@ process {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
-}
-
-params {
-    cleanup_intermediate_files_irods_extractor = false
 }
