--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,7 +1,7 @@
 // !! this is not currently imported, just put here as reference of something that should be added to a pipeline's config when including this subworkflow
 // Config for processes could be loaded in https://github.com/sanger-pathogens/nextflow-commons/ ; see https://github.com/sanger-pathogens/nextflow-commons/pull/14
 params {
-    study = -1 // default value that should fail the iRODS query
+    studyid = -1 // default value that should fail the iRODS query
     runid = -1 // default value that should fail the iRODS query
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
