default param save_fastqs

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -7,6 +7,8 @@ params {
     plexid = -1 // default value that should fail the iRODS query
     save_metadata = true //on by default
     cleanup_intermediate_files_irods_extractor = false
+    save_fastqs = false
+    preexisting_fastq_tag = "raw_fastq"
 }
 
 env {
