add all to config

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -5,6 +5,8 @@ params {
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
     save_metadata = true //on by default
+    save_fastqs = false
+    save_nested_fastqs = false
 }
 
 env {
