set default value for parameters

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -9,6 +9,9 @@ params {
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
     preexisting_fastq_tag = "raw_fastq"
+    results_dir = "./results"
+    manifest_of_lanes = null
+    manifest_of_reads = null
 }
 
 env {
