--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -10,6 +10,7 @@ params {
     save_fastqs = false
     save_nested_fastqs = false
     preexisting_fastq_tag = "raw_fastq"
+    split_sep_for_ID_from_fastq = "_1.fastq"
     results_dir = "./results"
     manifest_of_lanes = null
     manifest_of_reads = null
