--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -8,7 +8,8 @@ params {
     save_metadata = true //on by default
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
-    save_nested_fastqs = false
+    save_method = flat
+    raw_reads_prefix = "raw_"
     preexisting_fastq_tag = "raw_fastq"
     split_sep_for_ID_from_fastq = "_1.fastq"
     results_dir = "./results"
