add bowtie2 as default mapper

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -15,6 +15,7 @@ params {
     results_dir = "./results"
     manifest_of_lanes = null
     manifest_of_reads = null
+    mapper = "bowtie2"
 }
 
 env {
