allow skipping of queues

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -16,6 +16,7 @@ params {
     manifest_of_lanes = null
     manifest_of_reads = null
     mapper = "bowtie2"
+    start_queue = "normal"
 }
 
 env {
