alternative start queue

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -13,6 +13,7 @@ params {
     results_dir = "./results"
     manifest_of_lanes = null
     manifest_of_reads = null
+    start_queue = "normal"
 }
 
 env {
