Update strain_mapper.config with gatk params

--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -7,4 +7,6 @@ params {
     keep_sorted_bam = false
     save_fastqs = false
     mapper = "bowtie2"
+    keep_gatk_bam = false
+    gatk_java_args = "-Xmx4g"
 }
