--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -1,12 +1,17 @@
 params {
+    // Mapping/Variant calling options
     reference = null
+    mapper = "bowtie2"
+    method = "bcftools"
     only_report_alts = true
-    VCF_filters = 'QUAL>=50 & MIN(DP)>=8 & ((ALT!="." & DP4[2]>3 & DP4[3]>3) | (ALT="." & DP4[0]>3 & DP4[1]>3))'
+    bcftools_vcf_filter = 'QUAL>=50 & MIN(DP)>=8 & ((ALT!="." & DP4[2]>3 & DP4[3]>3) | (ALT="." & DP4[0]>3 & DP4[1]>3))'
+    gatk_vcf_filter = 'QUAL>=50 & MIN(FORMAT/DP)>=8 & ((ALT!="." & FORMAT/AD[*:1]>7) | (ALT="." & FORMAT/AD[*:0]>7))'
     skip_filtering = false
     keep_raw_vcf = false
     keep_sorted_bam = false
-    save_fastqs = false
-    mapper = "bowtie2"
+    gatk_haplotypecaller_output_mode = "EMIT_ALL_ACTIVE_SITES"
     keep_gatk_bam = false
+
+    // Other
     gatk_java_args = "-Xmx4g"
 }
