--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,6 +1,6 @@
 params {
     save_metadata = true //on by default
-    combine_same_id_crams = false //false by default treat each cram independantly
+    combine_same_id_crams = false // false by default i.e. treat each cram independently
     dehumanising_method = "kneaddata_bowtie2_T2T"
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
