--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -5,6 +5,7 @@ params {
     skip_filtering = false
     keep_raw_vcf = false
     keep_sorted_bam = false
+    keep_dedup_bam = false
     save_fastqs = false
     mapper = "bowtie2"
     bigwig = false
