--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -7,6 +7,7 @@ params {
     preexisting_fastq_tag = "raw_fastq"
     split_sep_for_ID_from_fastq = "_1.fastq"
     start_queue = "normal"
+    metadata_only = false
 }
 
 env {
