PAT-1930 Change target and type in irods query

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -3,6 +3,8 @@ params {
     runid = -1 // default value that should fail the iRODS query
     laneid = -1 // default value that should fail the iRODS query
     plexid = -1 // default value that should fail the iRODS query
+    target = "1"
+    type = "cram"
     save_metadata = true //on by default
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
