--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -2,7 +2,7 @@ params {
     // Mapping/Variant calling options
     reference = null
     mapper = "bowtie2"
-    method = "bcftools"
+    variant_caller = "bcftools"
     only_report_alts = true
     bcftools_vcf_filter = 'QUAL>=50 & MIN(DP)>=8 & ((ALT!="." & DP4[2]>3 & DP4[3]>3) | (ALT="." & DP4[0]>3 & DP4[1]>3))'
     gatk_vcf_filter = 'QUAL>=50 & MIN(FORMAT/DP)>=8 & ((ALT!="." & FORMAT/AD[*:1]>7) | (ALT="." & FORMAT/AD[*:0]>7))'
