--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -8,6 +8,7 @@ params {
     raw_reads_prefix = ""
     preexisting_fastq_tag = "raw_fastq"
     split_sep_for_ID_from_fastq = "_1.fastq"
+    lane_plex_sep = "#"
     start_queue = "normal"
 }
 
