--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -1,7 +1,7 @@
 params {
     reference = null
     only_report_alts = true
-    VCF_filters = '--soft-filter LowQual --exclude "QUAL<50 || MIN(DP)<8 || MAX(AD)/SUM(DP)<0.9 || MQ<30"'
+    VCF_filters = """--soft-filter LowQual --exclude 'QUAL<50 || MIN(DP)<8 || MAX(AD)/SUM(DP)<0.9 || MQ<30 || ALT!="." & (DP4[0]<=3 | DP4[1]<=3) | ALT=="." & (DP4[0]<=3 & DP4[1]<=3)'"""
     skip_filtering = false
     keep_raw_vcf = false
     keep_sorted_bam = false
