--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -1,6 +1,7 @@
 params {
     reference = null
     only_report_alts = true
+    minimum_mapping_quality = 20
     VCF_filters = 'QUAL>=50 & MIN(DP)>=8 & ((ALT!="." & DP4[2]>3 & DP4[3]>3) | (ALT="." & DP4[0]>3 & DP4[1]>3))'
     skip_filtering = false
     keep_raw_vcf = false
@@ -9,5 +10,5 @@ params {
     save_fastqs = false
     mapper = "bowtie2"
     bigwig = false
-    samtools_stats = false
+    samtools_stats = true
 }
