skip phix entries by default

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -10,6 +10,7 @@ params {
     split_sep_for_ID_from_fastq = "_1.fastq"
     lane_plex_sep = "#"
     start_queue = "normal"
+    irods_component_to_skip = "phix"
 }
 
 env {
