--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -1,7 +1,7 @@
 params {
     reference = null
     only_report_alts = true
-    minimum_mapping_quality = 20
+    minimum_base_quality = 20
     VCF_filters = 'QUAL>=50 & MIN(DP)>=8 & ((ALT!="." & DP4[2]>3 & DP4[3]>3) | (ALT="." & DP4[0]>3 & DP4[1]>3))'
     skip_filtering = false
     keep_raw_vcf = false
@@ -11,4 +11,5 @@ params {
     mapper = "bowtie2"
     bigwig = false
     samtools_stats = true
+    skip_cleanup = false
 }
