add cleanup to code and skips to all processes post v1.0.3

--- a/strain_mapper/strain_mapper.config
+++ b/strain_mapper/strain_mapper.config
@@ -9,6 +9,7 @@ params {
     keep_dedup_bam = false
     save_fastqs = false
     mapper = "bowtie2"
+    skip_read_deduplication = false
     bigwig = false
     samtools_stats = true
     skip_cleanup = false
