add parameters to enable building locally

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -8,6 +8,7 @@ params {
     classification_level = 'S'  // [Options = 'D','P','C','O','F','G','S'] - taxonomic rank to analyze for bracken2
     threshold = 10  // minimum number of reads required for a classification at the specified rank
     get_classified_reads = false
+    enable_building = false
 }
 
 process {
