add it as a option

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -11,6 +11,7 @@ params {
     lane_plex_sep = "#"
     start_queue = "normal"
     irods_subset_to_skip = "phix"
+    short_metacsv_name = false
 }
 
 env {
