list of fastqc fields that really matter

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -1,5 +1,6 @@
 params {
     save_fastqc = false
+    fastqc_pass_required_fields = ["Per base sequence quality", "Per sequence quality scores", "Per base N content"]
     genus_abundance_threshold = 90
     species_abundance_threshold = 85
 }
