draft for selective criteria

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -1,6 +1,6 @@
 params {
     save_fastqc = false
-    fastqc_pass_required_fields = ["Per base sequence quality", "Per sequence quality scores", "Per base N content"]
+    fastqc_pass_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/fastqc_pass_criteria.json"
     genus_abundance_threshold = 90
     species_abundance_threshold = 85
 }
