--- a/qc/qc.config
+++ b/qc/qc.config
@@ -1,6 +1,7 @@
 params {
     save_fastqc = false
     fastqc_pass_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/fastqc_pass_criteria.json"
+    fastqc_no_fail_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/empty_file"
     genus_abundance_threshold = 90
     species_abundance_threshold = 85
 }
