--- a/tree_build/tree_build.config
+++ b/tree_build/tree_build.config
@@ -1,7 +1,9 @@
 params {
+    remove_recombination = false
     gubbins_filter_percentage =  95  // Maximum missing value characters (N or gap) in alignment
     tree_search = "pars{10}"  // Any string acceptable by --tree parameter of raxml-ng
     bootstrap_trees = 200
+    check_model = false
     model_complexity_criterion = ""  // -AIC or -AICc  (BIC is default, i.e. empty string)
     raxml_base_model = "GTR+G4"  // No reason really why we select this as the default model, but maybe better to have a sufficiently complex model. Actual model to use could be obtained using the ModelFinder (in IQTree) or some other tool.
 }
