--- a/tree_build/tree_build.config
+++ b/tree_build/tree_build.config
@@ -5,5 +5,6 @@ params {
     bootstrap_trees = 200
     check_model = false
     model_complexity_criterion = ""  // -AIC or -AICc  (BIC is default, i.e. empty string)
-    raxml_base_model = "GTR+G4"  // No reason really why we select this as the default model, but maybe better to have a sufficiently complex model. Actual model to use could be obtained using the ModelFinder (in IQTree) or some other tool.
+    raxml_base_model = "GTR+G4"  // default model based on community standards, but another model more adequate to the dataset could be selected using ModelFinder module in IQTree or some other tool.
+    raxmlng_simd = "avx"
 }
