--- a/tree_build/tree_build.config
+++ b/tree_build/tree_build.config
@@ -6,5 +6,5 @@ params {
     check_model = false
     model_complexity_criterion = ""  // -AIC or -AICc  (BIC is default, i.e. empty string)
     raxml_base_model = "GTR+G4"  // default model based on community standards, but another model more adequate to the dataset could be selected using ModelFinder module in IQTree or some other tool.
-    raxmlng_simd = "avx"
+    raxmlng_args = "--simd avx"  // performance on farm22 is better with AVX instruction set than AVX2
 }
