Add random seed to raxml-ng

--- a/tree_build/tree_build.config
+++ b/tree_build/tree_build.config
@@ -7,4 +7,5 @@ params {
     model_complexity_criterion = ""  // -AIC or -AICc  (BIC is default, i.e. empty string)
     base_model = "GTR+G4"  // default model based on community standards, but another model more adequate to the dataset could be selected using ModelFinder module in IQTree or some other tool.
     raxmlng_args = "--simd avx"  // performance on farm22 is better with AVX instruction set than AVX2
+    seed = "1234"  // seed to use for raxml-ng bootstraping (ensures deterministic pipeline output)
 }
