fixing empty dorado, adding back config params

--- a/basecalling/basecalling.config
+++ b/basecalling/basecalling.config
@@ -25,6 +25,13 @@ params {
     save_trimmed = true
     save_too_short = true
     save_too_long = true
+
+    reference = "/data/pam/team216/mb29/scratch/Treponema/Treponema_References/NC_021508.1.mask-Ribosomal-Operon2.fasta"
+    raw_read_dir = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/pod5"
+    primers = "/data/pam/team216/mb29/scratch/Treponema/TP_Discriminatory_sites_2021/MinION_Lab_Testing/binding_sites/TP-Discriminatory-primers.20230208_23S-v1.fas"
+    target_regions_bed = "/data/pam/team230/wr7/scratch/tmp/ampliseq_pipeline/fixed.bed"
+    additional_metadata = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/metadata/sample_to_barcode.csv"
+
 }
 
 // to add to nextflow.commons
