add ommitted config params

--- a/basecalling/nextflow.config
+++ b/basecalling/nextflow.config
@@ -5,6 +5,15 @@ params {
     generic_config_url = ""
 }
 
+manifest {
+    name            = 'long-read-ampliseq'
+    author          = 'PAM Informatics'
+    homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/long-read-ampliseq'
+    description     = 'AmpliSeq analysis pipeline for STI and epidemic pathogens from long reads'
+    mainScript      = 'test.nf'
+    nextflowVersion = '>=21.04.0'
+    version         = 'v0.0.1'
+}
 
 params {
     // Basecalling
@@ -16,6 +25,7 @@ params {
     barcode_kit_name = ["SQK-NBD114-24"] //https://github.com/nanoporetech/dorado/issues/625
     read_format = "fastq"
     dorado_local_path = ""
+    min_qscore = 9
 
     // Save output files
     // TODO Make all the file retaining names consistent! 
@@ -28,8 +38,6 @@ params {
 
     reference = "/data/pam/team216/mb29/scratch/Treponema/Treponema_References/NC_021508.1.mask-Ribosomal-Operon2.fasta"
     raw_read_dir = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/pod5"
-    primers = "/data/pam/team216/mb29/scratch/Treponema/TP_Discriminatory_sites_2021/MinION_Lab_Testing/binding_sites/TP-Discriminatory-primers.20230208_23S-v1.fas"
-    target_regions_bed = "/data/pam/team230/wr7/scratch/tmp/ampliseq_pipeline/fixed.bed"
     additional_metadata = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/metadata/sample_to_barcode.csv"
 
 }
