rename config, add in lsf to config

--- a/basecalling/basecalling.config
+++ b/basecalling/basecalling.config
@@ -40,6 +40,11 @@ params {
     raw_read_dir = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/pod5"
     additional_metadata = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/metadata/sample_to_barcode.csv"
 
+    // LSF options
+    queue_size = 50
+    submit_rate_limit = '50/2min'
+    monochrome_logs = false
+
 }
 
 // to add to nextflow.commons
