remove superfluous modules from sam tools

--- a/basecalling/basecalling.config
+++ b/basecalling/basecalling.config
@@ -6,11 +6,11 @@ params {
 }
 
 manifest {
-    name            = 'long-read-ampliseq'
+    name            = 'Basecalling'
     author          = 'PAM Informatics'
     homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/long-read-ampliseq'
     description     = 'AmpliSeq analysis pipeline for STI and epidemic pathogens from long reads'
-    mainScript      = 'test.nf'
+    mainScript      = 'basecalling.nf'
     nextflowVersion = '>=21.04.0'
     version         = 'v0.0.1'
 }
