--- a/basecalling/basecalling.config
+++ b/basecalling/basecalling.config
@@ -6,7 +6,7 @@ params {
 }
 
 manifest {
-    name            = 'Basecalling'
+    name            = 'Nanopore Basecalling'
     author          = 'PAM Informatics'
     homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/long-read-ampliseq'
     description     = 'AmpliSeq analysis pipeline for STI and epidemic pathogens from long reads'
@@ -29,12 +29,7 @@ params {
 
     // Save output files
     // TODO Make all the file retaining names consistent! 
-    keep_sorted_bam = true
-    keep_bam_files = false
     save_fastqs = true
-    save_trimmed = true
-    save_too_short = true
-    save_too_long = true
 
     reference = "/data/pam/team216/mb29/scratch/Treponema/Treponema_References/NC_021508.1.mask-Ribosomal-Operon2.fasta"
     raw_read_dir = "/lustre/scratch126/pam/teams/team230/sd28/long-read-ampliseq/pod5"
