--- a/ont_basecalling/basecalling.config
+++ b/ont_basecalling/basecalling.config
@@ -8,8 +8,8 @@ params {
 manifest {
     name            = 'Nanopore Basecalling'
     author          = 'PAM Informatics'
-    homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/long-read-ampliseq'
-    description     = 'AmpliSeq analysis pipeline for STI and epidemic pathogens from long reads'
+    homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/assorted-sub-workflows'
+    description     = 'Stand alone subworkflow for basecalling on Nanopore reads'
     mainScript      = 'basecalling.nf'
     nextflowVersion = '>=21.04.0'
     version         = 'v0.0.1'
