--- a/ont_basecalling/basecalling.config
+++ b/ont_basecalling/basecalling.config
@@ -77,8 +77,8 @@ profiles {
         includeConfig "./config/nextflow-commons/common.config"
 
         docker.enabled = true
-        params.dorado_local_path = "/Users/Shared/ampliseq/dorado-0.7.1-osx-arm64/bin/dorado"
-        params.basecall_model_path = "/Users/Shared/ampliseq/dna_r10.4.1_e8.2_400bps_hac@v4.3.0"
+        params.dorado_local_path = ""
+        params.basecall_model_path = ""
     }
 }
 
