--- a/ont_basecalling/basecalling.config
+++ b/ont_basecalling/basecalling.config
@@ -9,7 +9,7 @@ manifest {
     name            = 'Nanopore Basecalling'
     author          = 'PAM Informatics'
     homePage        = 'https://gitlab.internal.sanger.ac.uk/sanger-pathogens/pipelines/assorted-sub-workflows'
-    description     = 'Stand alone subworkflow for basecalling on Nanopore reads'
+    description     = 'Subworkflow for basecalling from Nanopore reads'
     mainScript      = 'basecalling.nf'
     nextflowVersion = '>=21.04.0'
     version         = 'v0.0.1'
