--- a/mixed_input/subworkflows/mixed_input.config
+++ b/mixed_input/subworkflows/mixed_input.config
@@ -1,3 +1,5 @@
+includeConfig "../ena_downloader.config"
+
 params {
     studyid = -1 // default value that should fail the iRODS query
     runid = -1 // default value that should fail the iRODS query
@@ -5,6 +7,8 @@ params {
     plexid = -1 // default value that should fail the iRODS query
     target = "1"
     type = "cram"
+    accession_type = "run"
+    manifest_ena = null
     manifest_of_lanes = null
     manifest_of_reads = null
     manifest = null
