--- a/ont_basecalling/ont_basecalling.config
+++ b/ont_basecalling/ont_basecalling.config
@@ -22,7 +22,7 @@ params {
     basecall_model_path = ""
     //this is default anyways but allows for changing
     trim_adapters = "all"
-    barcode_kit_name = [] // pick within those listed in https://github.com/nanoporetech/dorado?tab=readme-ov-file#barcode-classification    
+    barcode_kit_name = "" // pick within those listed in https://github.com/nanoporetech/dorado?tab=readme-ov-file#barcode-classification    
     read_format = "fastq"
     dorado_local_path = ""
     min_qscore = 9
