--- a/ont_basecalling/ont_basecalling.config
+++ b/ont_basecalling/ont_basecalling.config
@@ -17,8 +17,7 @@ manifest {
 
 params {
     // Basecalling
-    basecall = "true"
-    basecall_model = "dna_r10.4.1_e8.2_400bps_hac@v4.3.0"
+    basecall_model = ""
     basecall_model_path = ""
     //this is default anyways but allows for changing
     trim_adapters = "all"
