remove undocumented start queue and add large_data flag

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -9,7 +9,7 @@ params {
     preexisting_fastq_tag = "raw_fastq"
     split_sep_for_ID_from_fastq = "_1.fastq"
     lane_plex_sep = "#"
-    start_queue = "normal"
+    large_data = false
     irods_subset_to_skip = "phix"
     short_metacsv_name = false
 }
