long read extraction

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -12,6 +12,7 @@ params {
     large_data = false
     irods_subset_to_skip = "phix"
     short_metacsv_name = false
+    read_type = "Illumina"
 }
 
 env {
