--- a/ont_basecalling/ont_basecalling.config
+++ b/ont_basecalling/ont_basecalling.config
@@ -17,21 +17,18 @@ manifest {
 
 params {
     // Basecalling
-    basecall_model = ""
-    basecall_model_path = ""
+    basecall_model = "sup"
     //this is default anyways but allows for changing
     trim_adapters = "all"
-    barcode_kit_name = "" // pick within those listed in https://github.com/nanoporetech/dorado?tab=readme-ov-file#barcode-classification    
+    barcode_kit_name = null // pick within those listed in https://github.com/nanoporetech/dorado?tab=readme-ov-file#barcode-classification    
     read_format = "fastq"
     dorado_local_path = ""
     min_qscore = 9
-
-    // Save output files
-    // TODO Make all the file retaining names consistent! 
-    save_fastqs = true
+    barcode_arrangement = null
+    barcode_sequences = null
 
     raw_read_dir = ""
-    additional_metadata = ""
+    additional_metadata = null
 
     // LSF options
     monochrome_logs = false
@@ -46,7 +43,7 @@ process {
         //forms the resource from other labels
         clusterOptions = { "-M " + task.memory.toMega() + " -R 'select[ngpus>0] span[ptile=1]' -gpu 'num=1:mode=shared:gmem=" + task.memory.toMega() * 2 + "'" }
         
-        queue = { task.time > 48.h ? 'gpu-basement' : task.time > 12.h ? 'gpu-huge' : 'gpu-normal' }
+        queue = { task.time > 48.h ? 'gpu-basement' : task.time > 12.h ? 'gpu-huge' : 'gpu-huge' }
         
         // need to set --nv to enable GPU's to be used
         containerOptions = {
