use proper gpu queue

--- a/ont_basecalling/ont_basecalling.config
+++ b/ont_basecalling/ont_basecalling.config
@@ -43,7 +43,7 @@ process {
         //forms the resource from other labels
         clusterOptions = { "-M " + task.memory.toMega() + " -R 'select[ngpus>0] span[ptile=1]' -gpu 'num=1:mode=shared:gmem=" + task.memory.toMega() * 2 + "'" }
         
-        queue = { task.time > 48.h ? 'gpu-basement' : task.time > 12.h ? 'gpu-huge' : 'gpu-huge' }
+        queue = { task.time > 48.h ? 'gpu-basement' : task.time > 12.h ? 'gpu-huge' : 'gpu-normal' }
         
         // need to set --nv to enable GPU's to be used
         containerOptions = {
