remove local as its slower

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -20,18 +20,9 @@ env {
 
 process {
     // for IRODS_EXTRACTOR subworkflow
-
-    withName:JSON_PREP {
-        executor = "local"
-    }
-
     withName:BATON {
-        executor = "local"
-        maxForks = 1
-    }
-
-    withName:JSON_PARSE {
-        executor = "local"
+        executor = "lsf"
+        clusterOptions = "-R 'rusage[seqirods=100]'"
     }
 
     withName:RETRIEVE_CRAM {
