add ont retrieve to correct queue

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -30,4 +30,9 @@ process {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
+
+    withName:RETRIEVE_FASTQ {
+        executor = "lsf"
+        clusterOptions = "-R 'rusage[seqirods=100]'"
+    }
 }
