--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -1,4 +1,5 @@
-includeConfig "../ena_downloader.config"
+includeConfig "./subworkflows/ena_downloader.config"
+includeConfig "${workflow.ProjectDir}/assorted-sub-workflows/irods_extractor/subworkflows/irods.config"
 
 params {
     studyid = -1 // default value that should fail the iRODS query
