relative not using the project dir

--- a/mixed_input/mixed_input.config
+++ b/mixed_input/mixed_input.config
@@ -1,5 +1,5 @@
 includeConfig "./subworkflows/ena_downloader.config"
-includeConfig "${workflow.ProjectDir}/assorted-sub-workflows/irods_extractor/subworkflows/irods.config"
+includeConfig "../irods_extractor/subworkflows/irods.config"
 
 params {
     studyid = -1 // default value that should fail the iRODS query
