--- a/annotate_bakta/annotate_bakta.config
+++ b/annotate_bakta/annotate_bakta.config
@@ -2,4 +2,5 @@ params {
     bakta_args = ""
     bakta_db = "/data/pam/software/bakta/v5.1/"
     combine_annotations = false
+    publish_gbff = false
 }
