remove type and target from entering channel only post filtering

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -12,7 +12,8 @@ params {
     large_data = false
     irods_subset_to_skip = "phix"
     short_metacsv_name = false
-    read_type = "Illumina"
+    read_type = "illumina"
+    pre_basecalled = false
 }
 
 env {
@@ -21,12 +22,12 @@ env {
 
 process {
     // for IRODS_EXTRACTOR subworkflow
-    withName:RETRIEVE_CRAM {
+    withName:BATON_GET {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
 
-    withName:RETRIEVE_FASTQ {
+    withName:BATON_GET_COLLECTION {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
