Revert "remove type and target from entering channel only post filtering"
This reverts commit 576c7db73ebb891e4d366ee0b2915fb5860e5149.

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -12,8 +12,7 @@ params {
     large_data = false
     irods_subset_to_skip = "phix"
     short_metacsv_name = false
-    read_type = "illumina"
-    pre_basecalled = false
+    read_type = "Illumina"
 }
 
 env {
@@ -22,12 +21,12 @@ env {
 
 process {
     // for IRODS_EXTRACTOR subworkflow
-    withName:BATON_GET {
+    withName:RETRIEVE_CRAM {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
 
-    withName:BATON_GET_COLLECTION {
+    withName:RETRIEVE_FASTQ {
         executor = "lsf"
         clusterOptions = "-R 'rusage[seqirods=100]'"
     }
