allow for grouped searches DANGEROUS ATM

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,4 +1,5 @@
 params {
+    fastsearch = false //undocumented until safeguards in
     save_metadata = true //on by default
     combine_same_id_crams = false // false by default i.e. treat each cram independently
     dehumanising_method = "kneaddata_bowtie2_T2T"
