--- a/generate_mags/assemble/assemble.config
+++ b/generate_mags/assemble/assemble.config
@@ -1,5 +1,6 @@
 params {
-    min_contigs = 1500 // needs to be greater than 1000
+    assembly_stats = false
+    min_contig = 1500 // needs to be greater than 1000
     fastspades = null
     lock_phred = null
     metaspades = true
