--- a/generate_mags/binning/binning.config
+++ b/generate_mags/binning/binning.config
@@ -3,4 +3,6 @@ params {
     min_contigs = 1500
     maxbin_markers = 140
     metabat1 = null
+    min_completeness = 50
+    max_contamination = 5
 }
