add completemness and contamination to bin_refinement

--- a/generate_mags/bin_refinement/bin_refinement.config
+++ b/generate_mags/bin_refinement/bin_refinement.config
@@ -1,4 +1,6 @@
 params {
     checkm1 = false
     checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
+    min_completeness = 50
+    max_contamination = 5
 }
