Update config and schema in qc_mags

--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -1,8 +1,8 @@
 params {
-    checkm2_db = ""
-    gunc_db = ""
-    mdmcleaner_db = ""
-    gtdbtk_db = ""
+    checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
+    gunc_db = "/data/pam/software/gunc/GTDB/gunc_db_gtdb95.dmnd"
+    mdmcleaner_db = "/data/pam/software/mdmcleaner/v1"
+    gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
     fasta_ext = "fa"
 }
