--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -5,4 +5,5 @@ params {
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
     fasta_ext = "fa"
+    report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
 }
