Added alternative dereplication strategy to remove ambiguous contigs

--- a/mags_maker/bin_refinement/bin_refinement.config
+++ b/mags_maker/bin_refinement/bin_refinement.config
@@ -3,4 +3,5 @@ params {
     checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
     min_completeness = 50
     max_contamination = 5
+    remove_ambiguous_contigs = false
 }
