--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -2,7 +2,7 @@ params {
     assembly_stats = false
     min_contig = 1500 // needs to be greater than 1000
     fastspades = null
-    lock_phred = null
+    lock_phred = true
     metaspades = true
     megahit = true
 }
