add README and json schema

--- a/generate_mags/reassemble/reassembly.config
+++ b/generate_mags/reassemble/reassembly.config
@@ -5,6 +5,6 @@ params {
     min_completeness = 50
     max_contamination = 5
     checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
-    checkm1 = null
-    lock_phred = null
+    checkm1 = false
+    lock_phred = false
 }
