Fix default fasta extension
Avoids accidentally catching files that end in fa, e.g. *.gfa files

--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -4,6 +4,6 @@ params {
     mdmcleaner_db = "/data/pam/software/mdmcleaner/v1"
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
-    fasta_ext = "fa"
+    fasta_ext = ".fa"
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
 }
