--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -6,4 +6,5 @@ params {
 
     fasta_ext = "fa"
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
+    filter_manifest = "${projectDir}/assorted-sub-workflows/qc_mags/assets/filter_manifest.tsv"
 }
