simplified autoqc parameterisation and corrected paths to autoqc default config

--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -6,6 +6,5 @@ params {
 
     fasta_ext = "fa"
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
-    autoqc_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/autoqc_config.tsv"
-    autoqc = false
+    autoqc_config = null
 }
