--- a/mags_maker/binning/binning.config
+++ b/mags_maker/binning/binning.config
@@ -1,6 +1,6 @@
 params {
     bin_seed = 1234
-    min_contig = 1500
+    maxbin_min_contig = 1000
     maxbin_markers = 140
     metabat1 = null
     keep_unbinned = false
