split min contigs into three paramaters

--- a/mags_maker/binning/binning.config
+++ b/mags_maker/binning/binning.config
@@ -1,6 +1,7 @@
 params {
     bin_seed = 1234
-    min_contig = 1000
+    maxbin2_min_contig = 1000
+    concot_min_conting = 1000
     metabat_min_contig = 1500
     maxbin_markers = 140
     metabat1 = null
