remap error status 12 to 130 to ensure retry  strategy works

--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -7,3 +7,9 @@ params {
     megahit = true
     output_transposed = false
 }
+
+process{
+    withName:METASPADES{
+        shell = ['/bin/bash', '-u'] // omitting default option -e (errexit; see https://tldp.org/LDP/abs/html/options.html)
+    }
+}
