--- a/mags_maker/reassemble/reassembly.config
+++ b/mags_maker/reassemble/reassembly.config
@@ -8,3 +8,9 @@ params {
     checkm1 = false
     lock_phred = false
 }
+
+process{
+    withName:SPADES_REASSEMBLE{
+        shell = ['/bin/bash', '-u'] // omitting default option -e (errexit; see https://tldp.org/LDP/abs/html/options.html)
+    }
+}
