remap error status 12 to 130 to ensure retry  strategy works

--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -7,3 +7,10 @@ params {
     megahit = true
     output_transposed = false
 }
+
+process {
+    withName:METASPADES {
+        memory = {32.GB * (2 ** (task.attempt -1))}
+        maxRetries = 2
+    }
+}
