--- a/mags_maker/reassemble/reassembly.config
+++ b/mags_maker/reassemble/reassembly.config
@@ -8,3 +8,10 @@ params {
     checkm1 = false
     lock_phred = false
 }
+
+process {
+    withName:SPADES_REASSEMBLE {
+        memory = {32.GB * (2 ** (task.attempt -1))}
+        maxRetries = 2
+    }
+}
