Handle errors creating  and an error file (remove_small_contigs.err) and custom exit code but not printing warning message to nextflow log

--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -7,3 +7,11 @@ params {
     megahit = true
     output_transposed = false
 }
+
+
+process {
+    withName: 'REMOVE_SMALL_CONTIGS' {
+        shell = ['/bin/bash', '-u'] // omitting default option -e (errexit; see https://tldp.org/LDP/abs/html/options.html)
+    }
+
+}
