new image to enable use of bash

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,5 +1,5 @@
-process {
-    withName: 'PIPELINE_EVENTS.*' {
-        shell = ['/bin/sh', '-eu']
-    }
-}
+// process {
+//     withName: 'PIPELINE_EVENTS.*' {
+//         shell = ['/bin/sh', '-eu']
+//     }
+// }
