process withName PIPELINE_EVENTS.* singularity.envWhitelist

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,5 +1,5 @@
-// process {
-//     withName: 'PIPELINE_EVENTS.*' {
-//         shell = ['/bin/sh', '-eu']
-//     }
-// }
+process {
+    withName: 'PIPELINE_EVENTS.*' {
+        singularity.envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
+    }
+}
