--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,6 +1,8 @@
-process {
-    withName: 'PIPELINE_EVENTS.*' {
-        cpu = 1
-        //singularity.envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
-    }
+// process {
+//     withName: 'PIPELINE_EVENTS.*' {
+//         singularity.envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
+//     }
+// }
+singularity {
+    envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
 }
