--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -5,5 +5,6 @@ params {
     lock_phred = null
     metaspades = true
     megahit = true
+    megahit_deterministic = false
     output_transposed = false
 }
