make subwf-level config and publishDir directive  consistent ; this should not affect any pipeline as overriden in irods_Extractor and nothing gets published by default in other pipelines

--- a/irods_extractor/subworkflows/irods.config
+++ b/irods_extractor/subworkflows/irods.config
@@ -1,12 +1,11 @@
 params {
     save_metadata = true //on by default
     combine_same_id_crams = false // false by default i.e. treat each cram independently
-    dehumanising_method = "kneaddata_bowtie2_T2T"
     cleanup_intermediate_files_irods_extractor = false
     save_fastqs = false
     save_method = "nested"
-    raw_reads_prefix = ""
-    preexisting_fastq_tag = "raw_fastq"
+    raw_reads_prefix = "raw_" // prepended to 'fastqs'
+    preexisting_fastq_tag = "${raw_reads_prefix}fastqs"
     split_sep_for_ID_from_fastq = "_1.fastq"
     lane_plex_sep = "#"
     large_data = false
