overriding default shell choice from bash to sh (busybox)

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,8 +1,7 @@
-// process {
-//     withName: 'PIPELINE_EVENTS.*' {
-//         singularity.envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
-//     }
-// }
+process {
+    withName: 'PIPELINE_EVENTS.*' {
+        shell = ['/bin/sh', '-eu']
+}
 singularity {
     envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
 }
