more explicit process naming

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,5 +1,5 @@
 process {
-    withName: 'PIPELINE_EVENTS.*' {
+    withName: 'PIPELINE_EVENTS_OPEN_BATCH|PIPELINE_EVENTS_CLOSE_BATCH|PIPELINE_EVENTS_CREATE_FILE' {
         shell = ['/bin/sh', '-eu']
     }
 }
