--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,8 +1,8 @@
-process {
-    withName:PIPELINE_EVENTS_OPEN_BATCH {
-        shell = ['/bin/sh', '-eu']
-    }
-}
+// process {
+//     withName:'PIPELINE_EVENTS_.*' {
+//         shell = ['/bin/sh', '-eu']
+//     }
+// }
 singularity {
     envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
 }
