--- a/qc/qc.config
+++ b/qc/qc.config
@@ -1,3 +1,5 @@
+includeConfig "../taxo_profile/taxo_profile.config"
+
 params {
     save_fastqc = false
     fastqc_pass_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/fastqc_pass_criteria.json"
