new min_contig param fix

--- a/mags_maker/assemble/assemble.config
+++ b/mags_maker/assemble/assemble.config
@@ -1,5 +1,6 @@
 params {
     assembly_stats = false
+    min_contig = { -> [params.maxbin2_min_contig, params.concoct_min_contig, params.metabat_min_contig].min() }
     fastspades = null
     lock_phred = null
     metaspades = true
