--- a/mags_maker/binning/binning.config
+++ b/mags_maker/binning/binning.config
@@ -3,6 +3,7 @@ params {
     maxbin2_min_contig = 1000
     concoct_min_contig = 1000
     metabat_min_contig = 1500
+    min_contig = { -> [params.maxbin2_min_contig, params.concoct_min_contig, params.metabat_min_contig].min() }
     maxbin_markers = 140
     metabat1 = null
     keep_unbinned = false
