Increase the exitStatusReadTimeout for checkm as causing jobs to fail even though they have been successful

--- a/mags_maker/bin_refinement/bin_refinement.config
+++ b/mags_maker/bin_refinement/bin_refinement.config
@@ -5,3 +5,9 @@ params {
     max_contamination = 5
     remove_ambiguous_contigs = false
 }
+
+process {
+  withName: 'CHECKM|CHECKM2' {
+    exitStatusReadTimeoutMillis = 300000  // wait up to 5 minutes
+  }
+}
