--- a/mags_maker/reassemble/reassembly.config
+++ b/mags_maker/reassemble/reassembly.config
@@ -13,4 +13,7 @@ process{
     withName:SPADES_REASSEMBLE{
         shell = ['/bin/bash', '-u'] // omitting default option -e (errexit; see https://tldp.org/LDP/abs/html/options.html)
     }
+    withName: 'CHECKM|CHECKM2' {
+        exitStatusReadTimeoutMillis = 300000  // wait up to 5 minutes
+  }
 }
