--- a/qc_mags/assets/report_config.json
+++ b/qc_mags/assets/report_config.json
@@ -10,5 +10,9 @@
   "GTDBTK": {
     "id_column": "user_genome",
     "keep_columns": ["classification", "closest_genome_reference"]
+  },
+  "QUAST_SUMMARY": {
+    "id_column": "Assembly",
+    "keep_columns": ["N50", "Total length", "Proportion Contigs <= 1kbp"]
   }
 }
