pass/fail interface for sylph, requiring integration of sylph-tax

--- a/taxo_profile/taxo_profile.config
+++ b/taxo_profile/taxo_profile.config
@@ -5,4 +5,5 @@ params {
     sylph_db = "/data/pam/software/sylph/gtdb-r226-c200-dbv1/gtdb-r226-c200-dbv1.syldb"
     save_sylph_sketches = false
     sketch_size = 31 // Only ksize 21 or 31 supported
+    sylphtax_db_tag = "/data/pam/software/sylph-tax/v1/gtdb_r226_metadata.tsv"
 }
