Update modules to avoid overwriting files in publishDirs

--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -8,5 +8,6 @@ params {
     min_contig = 500
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
     autoqc_config = null
+    skip_raw_reports = false
 }
     
