--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -4,6 +4,8 @@ params {
     mdmcleaner_db = "/data/pam/software/mdmcleaner/v1"
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
+    min_contig_length = 1000
+
     fasta_ext = "fa"
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
     autoqc_config = null
