param classification_level to bracken_classification_level

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -5,7 +5,7 @@ params {
     bracken_threads = 10
     kmer_len = 35  // default provided bracken2 
     read_len = null  // ideal length of reads in sample
-    classification_level = 'S'  // [Options = 'D','P','C','O','F','G','S'] - taxonomic rank to analyze for bracken2
+    bracken_classification_level = 'S'  // [Options = 'D','P','C','O','F','G','S'] - taxonomic rank to analyze for bracken2
     threshold = 10  // minimum number of reads required for a classification at the specified rank
     get_classified_reads = false
     enable_building = false
