--- a/taxo_profile/taxo_profile.config
+++ b/taxo_profile/taxo_profile.config
@@ -8,6 +8,6 @@ params {
     // Kraken2 parameters
     bracken_profile = false
     kraken2_db = "/data/pam/software/kraken2/standard/k2_standard_20250402"
-    classification_level = 'S'
+    bracken_classification_level = 'S'
     read_len = 150
 }
