--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -5,6 +5,8 @@ params {
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
     fasta_ext = "fa"
+    min_contig = 500
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
     autoqc_config = null
 }
+    
