separate classification level check from bracken profile check + restore bracken_classification_level param

--- a/taxo_profile/taxo_profile.config
+++ b/taxo_profile/taxo_profile.config
@@ -8,6 +8,7 @@ params {
     // Kraken2 parameters
     bracken_profile = false
     kraken2_db = "/data/pam/software/kraken2/standard/k2_standard_20250402"
-    classification_level = 'S'
+    bracken_classification_level = 'S' // Cannot check the accuracy of classification at species level if bracken classification level is not set to 'S' (species)
+
     read_len = 150
 }
