--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -2,10 +2,10 @@ params {
     checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
     gunc_db = "/data/pam/software/gunc/GTDB/gunc_db_gtdb95.dmnd"
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
-
     fasta_ext = "fa"
 
     keep_small_contigs = false
+    temp_file_storage = "./tmp"
     min_contig = 1000
 
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
