--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -3,7 +3,7 @@ params {
     gunc_db = "/data/pam/software/gunc/GTDB/gunc_db_gtdb95.dmnd"
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
     fasta_ext = "fa"
-    temp_file_storage = "./tmp"
+    temp_file_storage = "/tmp"
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
 }
