--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -2,6 +2,7 @@ params {
     checkm2_db = "/data/pam/software/checkm2_db/uniref100.KO.1.dmnd"
     gunc_db = "/data/pam/software/gunc/GTDB/gunc_db_gtdb95.dmnd"
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
+
     fasta_ext = "fa"
 
     keep_small_contigs = false
@@ -19,4 +20,8 @@ process {
         maxForks = 10
         clusterOptions = "-R 'select[tmp>${params.temp_space}]'"
     }
+}
+
+if (params.keep_small_contigs) {
+    params.min_contig = 0
 }
