--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -4,6 +4,12 @@ params {
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
     fasta_ext = "fa"
-    min_contig = 500
+    keep_small_contigs = false
+
+    min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
+}
+
+if (params.keep_small_contigs) {
+    params.min_contig = 0
 }
