--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -8,6 +8,8 @@ params {
 
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
+
+    silence_gtdbtk = false
 }
 
 if (params.keep_small_contigs) {
