--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -9,7 +9,7 @@ params {
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
 
-    silence_gtdbtk = false
+    skip_gtdbtk = false
 }
 
 if (params.keep_small_contigs) {
