normalise container directive for PIPELINE_EVENTS_* processes and bump version

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -1,3 +1,7 @@
 singularity {
     envWhitelist = "PIPELINE_EVENTS_DATABASE_HOSTS,PIPELINE_EVENTS_DATABASE_USER,PIPELINE_EVENTS_DATABASE_PASSWORD,PIPELINE_EVENTS_DATABASE_DBNAME"
 }
+params {
+    pipeline_events_track = false
+    pipeline_events_container = 'gitlab-registry.internal.sanger.ac.uk/sanger-pathogens/pipeline-event-api/pipeline-event-api:v1.0.3'
+}
