--- a/qc/qc.config
+++ b/qc/qc.config
@@ -1,6 +1,28 @@
 includeConfig "../taxo_profile/taxo_profile.config"
 
 params {
+
+    // -- trimmomatic --//
+    run_trimmomatic = true
+    trimmomatic_threads = 4
+    adapter_fasta = null
+    trimmomatic_options = "ILLUMINACLIP:${params.adapter_fasta}:2:10:7:1 CROP:151 SLIDINGWINDOW:4:20 MINLEN:70"
+
+    // -- TRF --//
+    run_trf = true
+    trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
+
+    // -- scrubber --//
+    run_hrr = true
+
+    // output files
+    debug_preproc_output = false // publish intermediate files 
+    publish_clean_reads = true
+    compress_clean_reads = false // compress clean reads to save space
+
+    // -- scripts --//
+    params.script_src_path="${projectDir}/assorted-sub-workflows/qc/bin/" 
+
     save_fastqc = false
     fastqc_pass_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/fastqc_pass_criteria.json"
     fastqc_no_fail_criteria = "${projectDir}/assorted-sub-workflows/qc/assets/fastqc_no_fail_criteria.json"
