Refine code and add in option to request a specific amount of space

--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -6,4 +6,12 @@ params {
     temp_file_storage = null
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
+    tmp_space = "30GB"
+}
+
+process {
+    withName:GTDBTK {
+        maxForks = 10
+        clusterOptions = "-R 'select[tmp>${params.tmp_space}]'"
+    }
 }
