fix seqkit reporting bug

--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -15,3 +15,7 @@ process {
         clusterOptions = "-R 'select[tmp>${params.tmp_space}]'"
     }
 }
+
+if (params.keep_small_contigs) {
+    params.min_contig = 0
+}
