--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -6,13 +6,13 @@ params {
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
     temp_file_storage = null
-    tmp_space = "30GB"
+    temp_space = "30GB"
 }
 
 process {
     withName:GTDBTK {
         maxForks = 10
-        clusterOptions = "-R 'select[tmp>${params.tmp_space}]'"
+        clusterOptions = "-R 'select[tmp>${params.temp_space}]'"
     }
 }
 
