draft adding bmtagger

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -12,8 +12,14 @@ params {
     run_trf = true
     trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
 
-    // -- scrubber --//
+    // -- bmtagger --//
     run_hrr = true
+    bmtagger_db = 
+    bmtagger_host =
+    bmtagger_db = "/data/pam/software/bmtagger"
+    bmtagger_host = "T2T-CHM13v2.0"
+    publish_host_reads = false
+
 
     // output files
     debug_preproc_output = false // publish intermediate files 
