Refactor QC workflow: enhance preprocessing steps, integrate read removal and filtering, and update output handling.

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -13,9 +13,7 @@ params {
     trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
 
     // -- bmtagger --//
-    run_hrr = true
-    bmtagger_db = 
-    bmtagger_host =
+    run_bmtagger = true
     bmtagger_db = "/data/pam/software/bmtagger"
     bmtagger_host = "T2T-CHM13v2.0"
     publish_host_reads = false
@@ -24,7 +22,6 @@ params {
     // output files
     debug_preproc_output = false // publish intermediate files 
     publish_clean_reads = true
-    compress_clean_reads = false // compress clean reads to save space
 
     // -- scripts --//
     params.script_src_path="${projectDir}/assorted-sub-workflows/qc/bin/" 
