Add flag to avoid batch manifest adding for now

--- a/pipeline_events/pipeline_events.config
+++ b/pipeline_events/pipeline_events.config
@@ -4,5 +4,6 @@ singularity {
 params {
     pipeline_events_track = false
     pipeline_events_follow_links = false
+    associate_batch_metadata = false
     pipeline_events_container = 'gitlab-registry.internal.sanger.ac.uk/sanger-pathogens/pipeline-event-api/pipeline-event-api:v1.0.3'
 }
