adding k2b --memory-mapping option

--- a/kraken2bracken/kraken2bracken.config
+++ b/kraken2bracken/kraken2bracken.config
@@ -3,6 +3,7 @@ params {
     kraken2_db = null
     kraken2_threads = 4
     bracken_threads = 10
+    memory_mapping = false
     kmer_len = 35  // default provided bracken2 
     read_len = null  // ideal length of reads in sample
     bracken_classification_level = 'S'  // [Options = 'D','P','C','O','F','G','S'] - taxonomic rank to analyze for bracken2
@@ -14,7 +15,7 @@ params {
 process {
     withName:KRAKEN2 {
         cpus = { params.kraken2_threads }
-        memory = { estimate_kraken_mem(params.kraken2_db, 1, task) }
+        memory = { (params.memory_mapping == true ? "1.GB" : estimate_kraken_mem(params.kraken2_db, 1, task)) }
     }
     withName:SEARCH_LIBRARY {
         cpus = { params.bracken_threads }
