resolve merge conflicts

--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -4,10 +4,21 @@ params {
     gtdbtk_db = "/data/pam/software/GTDBTk/release226"
 
     fasta_ext = "fa"
-    keep_small_contigs = false
 
+    keep_small_contigs = false
     min_contig = 1000
+
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
+    
+    temp_file_storage = null
+    temp_space = "30GB"
+}
+
+process {
+    withName:GTDBTK {
+        maxForks = 10
+        clusterOptions = "-R 'select[tmp>${params.temp_space}]'"
+    }
 }
 
 if (params.keep_small_contigs) {
