update qc isolates and mags to make /tmp the default instead of writing to memory

--- a/qc_mags/qc_mags.config
+++ b/qc_mags/qc_mags.config
@@ -8,7 +8,7 @@ params {
     report_config = "${projectDir}/assorted-sub-workflows/qc_mags/assets/report_config.json"
     autoqc_config = null
     skip_raw_reports = false
-    temp_file_storage = null
+    temp_file_storage = "/tmp"
     temp_space = "30GB"
 }
     
