--- a/qc_isolates/qc_isolates.config
+++ b/qc_isolates/qc_isolates.config
@@ -5,7 +5,7 @@ params {
     fasta_ext = "fa"
     min_contig = 1000
     report_config = "${projectDir}/assorted-sub-workflows/qc_isolates/assets/report_config.json"
-    temp_file_storage = null
+    temp_file_storage = "/tmp"
     temp_space = "30GB"
 }
 
