add in trimmomatic summary stats output and change default for running trf to false

--- a/qc/qc.config
+++ b/qc/qc.config
@@ -9,7 +9,7 @@ params {
     trimmomatic_options = "ILLUMINACLIP:${params.adapter_fasta}:2:10:7:1 CROP:151 SLIDINGWINDOW:4:20 MINLEN:70"
 
     // -- TRF --//
-    run_trf = true
+    run_trf = false
     trf_cli_options= '2 7 7 80 10 50 500 -h -ngs' //"2 5 7 80 10 50 2000 -h -ngs"
 
     // -- bmtagger --//
